--- a/rules.ini
+++ b/rules.ini
@@ -2,7 +2,6 @@
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 
 ;规则集定义
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
 
@@ -43,7 +42,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 
 ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
