--- a/rules.ini
+++ b/rules.ini
@@ -2,8 +2,8 @@
 ;视频演示规则，因为教学原因添加的类型比较全面，实际应用应尽量删减，在达到自己目的的情况下做到最简化，否则会造成网络卡顿和延迟！！！！！
 
 ;规则集定义
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
-ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/xuanshao-zty/clash-rules/refs/heads/release/Proxy.list?token=GHSAT0AAAAAAC7U4MHRYLQ6JVW6CV5I4ZB4Z6AOZ3Q
+ruleset=🤖 AI,https://raw.githubusercontent.com/xuanshao-zty/clash-rules/refs/heads/release/AI.list?token=GHSAT0AAAAAAC7U4MHRLPNXSCFCWBT6PWB6Z6AO27A
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
