--- a/rules.ini
+++ b/rules.ini
@@ -9,7 +9,7 @@ ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/blackmatrix7/io
 ruleset=👨🏿‍💻 GitHub,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🍀 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🍀 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
-ruleset=💧 Copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=🐬 OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=🪟 Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -20,7 +20,6 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🎞️ 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -43,28 +42,31 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
+custom_proxy_group=慈善机场`select`!!GROUPID=0
+custom_proxy_group=SOCLOUD`select`!!GROUPID=1
+custom_proxy_group=♻️慈善机场`url-test`!!GROUPID=0`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️SOCLOUD`url-test`!!GROUPID=1`http://www.gstatic.com/generate_204`300,,50
+
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
 
 
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]DIRECT
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]🚀 节点选择`[]🐸 手动切换
-1
-custom_proxy_group=慈善机场`select`!!GROUPID=0
-custom_proxy_group=SOCLOUD`select`!!GROUPID=1
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]DIRECT
+custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]🚀 节点选择`[]🐸 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]🚀 节点选择`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]♻️慈善机场`[]♻️SOCLOUD`[]🚀 节点选择`[]🐸 手动切换
+
 
 custom_proxy_group=🐸 手动切换`select`.*
 
