--- a/rules.ini
+++ b/rules.ini
@@ -25,12 +25,8 @@ ruleset=🎞️ 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 
@@ -42,29 +38,29 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=慈善机场`select`!!GROUPID=0
-custom_proxy_group=SOCLOUD`select`!!GROUPID=1
-custom_proxy_group=番茄`select`!!GROUPID=2
-custom_proxy_group=♻️慈善机场`url-test`!!GROUPID=0`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️SOCLOUD`url-test`!!GROUPID=1`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️番茄`url-test`!!GROUPID=2`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=第一机场`select`!!GROUPID=0
+custom_proxy_group=第二机场`select`!!GROUPID=1
+custom_proxy_group=第三机场`select`!!GROUPID=2
+custom_proxy_group=♻️第一机场`url-test`!!GROUPID=0`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️第二机场`url-test`!!GROUPID=1`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️第三机场`url-test`!!GROUPID=2`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🚀 节点选择`select`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
 
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]🚀 节点选择
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]DIRECT
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]🚀 节点选择
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]🚀 节点选择
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]慈善机场`[]SOCLOUD`[]番茄`[]♻️慈善机场`[]♻️SOCLOUD`[]♻️番茄`[]🚀 节点选择
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
 
 
 ;启用自定义规则集
