--- a/rules.ini
+++ b/rules.ini
@@ -47,22 +47,22 @@ custom_proxy_group=第二机场`select`!!GROUPID=1
 custom_proxy_group=♻️第一机场`url-test`!!GROUPID=0`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️第二机场`url-test`!!GROUPID=1`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🚀 节点选择`select`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
 
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]DIRECT
-custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]第一机场`[]第二机场`[]第三机场`[]♻️第一机场`[]♻️第二机场`[]♻️第三机场`[]🚀 节点选择
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]🚀 节点选择
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]DIRECT
+custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]🚀 节点选择
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]🚀 节点选择
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]第一机场`[]第二机场`[]♻️第一机场`[]♻️第二机场`[]🚀 节点选择
 
 
 ;启用自定义规则集
